[tool.poetry]
name = "libfive"
version = "0.1.0a"
description = "libfive bindings for Python"
authors = ["Sem Mulder <sem@mulderke.net>"]
license = "MPL2"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
cython = "^0.29.19"
numpy = "^1.18.4"

[build-system]
requires = ["poetry>=0.12", "cython^=0.29.19"]
build-backend = "poetry.masonry.api"
