[tool.poetry]
name = "libfive"
version = "0.1.0a2"
description = "libfive bindings for Python"
authors = ["Sem Mulder <sem@mulderke.net>"]
license = "MPL2"
homepage = "https://github.com/SemMulder/libfive-python"
repository = "https://github.com/SemMulder/libfive-python"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
cython = "^0.29.21"

[build-system]
requires = ["poetry>=0.12", "cython>=0.29.21"]
build-backend = "poetry.masonry.api"
